# Jewish-bags-sniper

./: .gitignore  DEPLOYMENT.md  bags-sniper-onchain-spec.md  package-lock.json  run.sh  vps-setup.sh
bags-sniper-core/: Cargo.toml  run.sh
bags-sniper-core/src/: encryption.rs  executor.rs  geyser.rs  jupiter.rs  main.rs  manager.rs  metadata.rs  sniper.rs  supabase.rs  telegram.rs
bags-sniper-web/: package-lock.json  package.json
bags-sniper-web/app/: globals.css  layout.tsx  page.tsx
bags-sniper-web/app/dashboard/: page.tsx
bags-sniper-web/app/login/: page.tsx
bags-sniper-web/app/onboarding/: page.tsx
bags-sniper-web/app/signup/: page.tsx
bags-sniper-web/components/: AuthForm.tsx  AuthProvider.tsx  Providers.tsx
bags-sniper-web/lib/: encryption.ts  supabase.ts
bags-sniper-web/supabase/migrations/: 001_full_schema.sql  001_user_settings.sql  002_telegram_notifications.sql  003_signup_codes.sql
