[package]
name = "bags-sniper-core"
version = "2.0.0"
edition = "2021"
description = "Production Bags Claim Sniper with Yellowstone gRPC streaming"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
tokio-stream = "0.1"

# gRPC
tonic = { version = "0.10", features = ["tls", "tls-roots", "gzip"] }
prost = "0.12"
prost-types = "0.12"
yellowstone-grpc-proto = "1.0.1"

# Solana SDK
solana-sdk = "1.18"
solana-client = "1.18"

# HTTP Client
reqwest = { version = "0.11", features = ["json"] }
reqwest-eventsource = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
base64 = "0.22"
bs58 = "0.5"

# Logging
env_logger = "0.11"
log = "0.4"

# Utils
dotenv = "0.15"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
